--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,25 +1,105 @@
+body {
+  padding: 50px;
+  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
 
 #main {
+	margin:2px auto;
 	width: 90%;
 	height:auto;
-	min-height:700px;
-	margin:2px auto;
-	border:1px solid #ccc;
+	border:0px solid #ccc;
 
 	.left{
 		width:70%;
 		height:auto;
 		min-height:300px;
-		border:1px solid #ccc;
+		border:0px solid #ccc;
 		margin: 1px auto 1px 2px;
 		float: left;
+
+		.top{
+			margin: 2px auto 2px 2px;
+			width: 99%;
+			height: 24px;
+			line-height: 24px;
+			text-align: left;
+			font-size: 12px;
+			float: left;
+			border:1px solid #ccc;
+
+			a{
+				text-decoration: none;
+				color: #00B7FF;
+				margin:2px 10px;
+			}
+			a:hover{
+				color: #00B744;
+				margin:2px 10px;
+				text-decoration: underline;
+			}
+		}
+
+		.cont{
+			margin: 2px auto 2px 2px;
+			width: 99%;
+			height: auto;
+			min-height:400px;
+			font-size: 12px;
+			float: left;
+			border:1px solid #ccc;
+
+			.cells{
+				margin:0px auto;
+				width:100%;
+				height:42px;
+				line-height: 42px;
+				border-bottom:1px solid #ccc;
+				color:#333;
+
+				.imgs{
+					height:40px;
+					margin:1px auto 1px 10px;
+					float:left;
+					width:40px;
+				    line-height: 40px;
+				}
+
+				.reply{
+					height:40px;
+					margin:1px auto;
+					float:left;
+					width:80px;
+				    line-height: 40px;
+				    text-align: center;
+				}
+
+				.title{
+					height:40px;
+					margin:1px auto;
+					float:left;
+					width:auto;
+				    line-height: 40px;
+
+					a{
+						color:#847ae2;
+						text-decoration: none;
+					}
+				}
+			}
+
+			img{
+				border-radius: 5px;
+			  	box-shadow: 0px 0px 6px hsla(0, 27%, 42%, 0.5);
+			  	width: 32px;
+			}
+		}
 	}
 	.right{
 		width:28%;
 		height:auto;
 		min-height:300px;
 		border:1px solid #ccc;
-		margin: 1px auto 1px 2px;
+		margin: 3px auto 1px 2px;
 		float: left;
 
 		table{
