--- a/views/index.html
+++ b/views/index.html
@@ -2,29 +2,30 @@
 <html>
   <head lang="en">
     <meta charset="utf-8">
-    <title>{{users.length}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <title>Angular demo</title>
     <link rel="stylesheet/less" type="text/css" href="/stylesheets/style.less">
     <script src="/javascripts/less-1.3.3.min.js" type="text/javascript"></script>
     <script src="/javascripts/angular.min.js"></script>
-    <script src="/javascripts/controllers.js"></script>
+    <script src="/javascripts/ctrl.js"></script>
   </head>
-<body ng-app='myApp'>
-  <a href="#/about"> /about</a> |
-  <a href="#/"> home</a>
-  <!-- uncomment if HTML5Mode on -->
-  <!-- <a href="/about"> /about</a> | -->
-  <!-- <a href="/"> home</a> -->
-  <hr />
-  <div ng-view></div>
-
+<body>
   <div id="main">
-  	<div class="left"></div>
+  	<div class="left" ng-app='anApp'>
+  		<div class="top">
+  			<a href="#/">Home</a>
+  			<a href="#/post">Post</a>
+  			<a href="#/join">Join</a>
+  		</div>
+  		<div class="cont">
+  			<div ng-view></div>
+  		</div>
+
+  	</div>
   	<div class="right">
   	  <table>
   	  	<tr>
   	  		<td>
-  	  		<img width="200px" height="200px" src='<%=users[0].head%>' title='<%=users[0].name%>' alt='<%=users[0].name%>' />
+  	  		<img width="200px" height="200px" src='<%=users[0].head%>' title='<%=users[0].name%>' alt='<%=users[0].name%>' style="box-shadow:2px 2px 5px #CCC; border-radius:12px;" />
   	  		</td>
   	  	</tr>
   	  	<tr>
