优化部分，添加过滤器

--- a/views/cont/home.html
+++ b/views/cont/home.html
@@ -1,9 +1,9 @@
   <div ng-controller="homectrl">
     <div class="cells" ng-repeat="art in artils">
-    	<div class="imgs"><img src="{{art.head}}" align="absmiddle" /></div>
+    	<div class="imgs"><img ng-src="{{art.head}}" align="absmiddle" /></div>
     	<div class="reply">{{art.replys}}</div>
     	<div class="title">
-    		<a href="{{art.href}}">{{art.title.substr(0, 56)}}...</a>&nbsp;&nbsp;&nbsp;&nbsp;{{art.times}}</a>
+    		<a href="{{art.href}}">{{art.title | spititle}}</a>&nbsp;&nbsp;&nbsp;&nbsp;{{art.times}}</a>
     	</div>
     </div>
   </div>
