--- a/views/index.html
+++ b/views/index.html
@@ -5,8 +5,10 @@
     <title>Angular demo</title>
     <link rel="stylesheet/less" type="text/css" href="/stylesheets/style.less">
     <script src="/javascripts/less-1.3.3.min.js" type="text/javascript"></script>
+    <script src="/javascripts/jquery-1.9.1.min.js"></script>
     <script src="/javascripts/angular.min.js"></script>
     <script src="/javascripts/ctrl.js"></script>
+    <script src="/javascripts/filters.js"></script>
   </head>
 <body>
   <div id="main">
